2018-06-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed Log module logic to load data from the server, resolves #53

2018-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added debugging on the command-line, resolves #59

2018-05-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added context to Importer calls and log entries, resolves #27

2018-03-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Reviewed the UidRepository class, resolves #39

2018-03-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed all deprecated properties and API, dropped TYPO3 7 compatibility, resolves #57

2018-03-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected extension dependencies, resolves #56
	* Released version 4.0.2

2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made sync warning sticky, resolves #55

2018-02-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added handling of disabled Scheduler tasks, resolves #54
	* Replaced :class: construct in documentation, resolves #46
	* Added message about running synchronisation, resolves #50
	* Released version 4.0.1

2018-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of moved records, resolves #32

2017-11-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 4.0.0

2017-11-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added information about mapping MM relations, resolves #34

2017-11-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added note about "requiring" fields, resolves #36
	* Renamed column configuration properties containing underscores, resolves #38

2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation, resolves #26

2017-11-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility of default value for mapping configurations, resolves #35
	* Moved Connector callback to own Step class, resolves #37

2017-11-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
